--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.0",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.93.0",
@@ -22,6 +23,6 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "kontra": "^9.0.0"
+    "kontra": "^9.0.0",
   }
 }
